fix collapse feed tree button was invisible in safari

--- a/src/_content-wrap.less
+++ b/src/_content-wrap.less
@@ -1,6 +1,11 @@
 @import "_variables.less";
 
 #content-wrap#content-wrap {
+  &,
+  #toolbar-frame {
+    overflow: visible;
+  }
+
   #toolbar-frame,
   #headlines-frame {
     padding-right: 34px;
